--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "homepage": "https://olaoluwa2170.github.io/babalola-elisha",
-  "name": "abuad-web",
+  "name": "portfolio",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run buid",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
