--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
